<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main"
    android:layout_column="2"
    android:layout_row="9">


    <TextView
        android:id="@+id/timeTextView"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="end"
        android:layout_margin="@dimen/textViewMargin"
        android:text="@string/timer" />

    <Chronometer
        android:id="@+id/runTimeChronometer"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/textViewMargin"
        android:text="00:00" />

    <TextView
        android:id="@+id/distanceTextView"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="end"
        android:layout_margin="@dimen/textViewMargin"
        android:text="@string/distanceKm" />

    <TextView
        android:id="@+id/distanceRunTextView"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/textViewMargin"
        android:text="0" />

    <Button
        android:id="@+id/gpsPermissionButton"
        android:layout_width="match_parent"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_margin="@dimen/searchEditText"
        android:text="@string/gpsPermission"
        android:background="@color/colorAccent"/>

    <Button
        android:id="@+id/onGpsButton"
        android:text="@string/turnOnGPS"
        android:layout_column="0"
        android:layout_row="3"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/searchEditText"/>

    <Button
        android:id="@+id/offGpsButton"
        android:text="@string/turnOffGPS"
        android:layout_column="1"
        android:layout_row="3"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/searchEditText"/>

    <Button
        android:id="@+id/beginButton"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_width="match_parent"
        android:layout_columnSpan="2"
        android:text="@string/begin"
        android:layout_margin="@dimen/searchEditText"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/endButton"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_width="match_parent"
        android:layout_columnSpan="2"
        android:text="@string/end"
        android:layout_margin="@dimen/searchEditText"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"/>

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_margin="@dimen/searchEditText"
        android:hint="@string/editTextPlaceHolder"
        android:inputType="text"
        android:importantForAutofill="no" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="7"
        android:layout_columnSpan="2"
        android:layout_gravity="end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_search_category_default" />


</GridLayout>